--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -8,20 +8,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>VSTech Limited Homepage</title>
-<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-<link href="/static/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css">
-<link href="/static/plugins/revolution/css/layers.css" rel="stylesheet" type="text/css">
-<link href="/static/plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css">
+    <meta name="title" content="VSTech Limited - Innovative Software Solutions for Businesses">
+    <meta name="keywords" content="vstech, vs tech, vs-tech, software company, vstech limited, vstech homepage, homepage, home, software firms, software development, IT cunsultation, tech company, software company, innovative solutions, productivity, efficiency, industries, healthcare, finance, retail, government, education, best, company, tech">
+    <meta name="description" content="VSTech Limited is a leading software company that provides innovative solutions to help businesses maximize productivity and efficiency. We offer a wide range of products and services to industries such as healthcare, finance, retail, government, and education.">
 
-<link href="/static/css/style.css" rel="stylesheet">
-<link href="/static/css/responsive.css" rel="stylesheet">
+    <meta name="next-head-count" content="5" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>VSTech Limited - Innovative Software Solutions for Businesses</title>
 
-<!-- Dark Theme -->
-<link href="" id="themeLink" rel="stylesheet">
+	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css">
+	<link href="/static/plugins/revolution/css/layers.css" rel="stylesheet" type="text/css">
+	<link href="/static/plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css">
 
-<link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
-<link rel="icon" href="/static/images/favicon.png" type="image/x-icon">
+	<link href="/static/css/style.css" rel="stylesheet">
+	<link href="/static/css/responsive.css" rel="stylesheet">
+
+	<!-- Dark Theme -->
+	<link href="" id="themeLink" rel="stylesheet">
+
+	<link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
+	<link rel="icon" href="/static/images/favicon.png" type="image/x-icon">
 
 
 </head>
@@ -399,7 +406,7 @@
 							<figure class="image"><img src="/static/images/resource/image-3.jpg" alt=""></figure>
 							<div class="caption-box wow slideInRight">
 								<div class="icon-box">
-									<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now-two lightbox-image"><i class="icon fa fa-play"></i></a>
+									<a href="https://youtu.be/Oz-SvGZsTNc" class="play-now-two lightbox-image"><i class="icon fa fa-play"></i></a>
 								</div>
 								<div class="title-box">
 									<h5 class="title">Professional IT technology services you can trust</h5>
@@ -424,47 +431,7 @@
 		</div>
 	</section>
 	<!--End Call To Action Two -->
-
-	<!-- Project Section -->
-	<section class="project-section pb-0">
-		<div class="auto-container">
-			<div class="sec-title">
-				<div class="row">
-					<div class="col-lg-7">
-						<span class="sub-title">recently Completed work</span>
-						<h2>Improve & Enhance the <br>Tech Projects</h2>
-					</div>
-					<div class="col-lg-5">
-						<div class="text">Our team excels at improving and enhancing tech projects. We optimize systems, refine functionalities, and introduce innovative solutions. Leveraging cutting-edge technologies, we ensure highly efficient and effective outcomes for our clients.</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="carousel-outer">
-				<!-- Prject Carousel -->
-				{% if projects %}
-				<div class="project-carousel owl-carousel owl-theme">
-					<!-- Project Block -->
-					{% for project in projects %}
-					<div class="project-block">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" class="lightbox-image"><img src="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" alt=""></a></figure>
-								<a href="{{ project.get_absolute_url }}" class="icon"><i class="fa fa-long-arrow-alt-right"></i></a>
-							</div>
-							<div class="content-box">
-								<h4 class="title"><a href="{{ project.get_absolute_url }}">{{ project.title }}</a></h4>
-								<span class="cat">{{ project.category }}</span>
-							</div>
-						</div>
-					</div>	
-					{% endfor %}				
-				</div>
-				{% endif %}
-			</div>
-		</div>
-	</section>
-	<!--End Project Section -->
+{% include 'partials/projects/1.html' %}
 
 	<!-- Testimonial Section -->
 	<section class="testimonial-section">
@@ -630,23 +597,7 @@
 		</div>
 	</section>
 	<!-- End Team Section -->
-{% if partners %}
-	<!-- Clients Section   -->
-	<section class="clients-section">
-		<div class="auto-container">
-			<!-- Sponsors Outer -->
-			<div class="sponsors-outer">
-				<!--clients carousel-->
-				<ul class="clients-carousel owl-carousel owl-theme">
-					{% for partner in partners %}
-						<li class="slide-item"> <a href="{{ partner.website }}"><img src="{% if partner.logo %}{{ partner.logo.url }}{% endif %}" alt="{{ partner.title }}" title="{{ partner.title }}"></a> </li>
-					{% endfor %}
-				</ul>
-			</div>
-		</div>
-	</section>
-	<!--End Clients Section -->
-{% endif %}
+{% include 'partials/clients/1.html' %}
 	<!-- FAQ Section -->
 	<section class="faqs-section">
 
