--- a/templates/users/team/index.html
+++ b/templates/users/team/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}VSTech Limited Team - Experts and Professional in the IT team{% endblock %}
 {% block meta %}
+	<meta name="title" content="VSTech Limited Team - Experts and Professional in the IT team">
+    <meta name="keywords" content="vstech,team, members, vstech team, limited, vstech mission, vstech history, vstech vision, about vstech, vstech team,  software development, custom software, IT consultation, software solutions, business productivity, cost-effective solutions, user experience, software industry, software company history, company background, company mission, company vision, software experts, software professionals">
+    <meta name="description" content="Learn more about VSTech Limited Team, a software company that officially started on 20th October 2022. We take the time to understand our clients' processes and goals, and create custom software solutions tailored to their specific needs.">
 {% endblock %}
 {% block content %}
 	<!-- Team Section -->
