--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}About VSTech Limited - Software Solutions Tailored to Your Business{% endblock %}
 {% block meta %} 
-
+	<meta name="title" content="About VSTech Limited - Software Solutions Tailored to Your Business">
+    <meta name="keywords" content="vstech, vstech limited, vstech mission, vstech history, vstech vision, about vstech, vstech team,  software development, custom software, IT consultation, software solutions, business productivity, cost-effective solutions, user experience, software industry, software company history, company background, company mission, company vision, software experts, software professionals">
+    <meta name="description" content="Learn more about VSTech Limited, a software company that officially started on 20th October 2022. We take the time to understand our clients' processes and goals, and create custom software solutions tailored to their specific needs.">
 {% endblock %}
 {% block content %}
 	<!-- About Section Six-->
@@ -13,30 +16,27 @@
 						<div class="sec-title">
 							<span class="sub-title">About Our Company</span>
 							<h2>Always Deliver More than you Expected</h2>
-							<div class="text">Sed non odio non elit porttitor tincidunt. Donec fermentum, elit sit amet gravida molestie, orci dui eleifend sem, at blandit ipsum diam non purus. Duis dapibus nisi eget vehicula dignissim.</div>
-						</div>
-
-						<div class="content-box">
+							<div class="text">VSTech Limited is a leading software company that specializes in providing innovative solutions to businesses across various industries. Our primary focus is on helping our clients maximize productivity and efficiency through cutting-edge software products and services. We are committed to delivering the highest quality solutions that enhance user experience, increase operational efficiency, and reduce costs.</div>
+						  </div>
+						  <div class="content-box">
 							<div class="about-block-four">
-								<i class="icon flaticon-business-018-startup"></i>
-								<h5 class="title">End to End Developement </h5>
-								<div class="text">Sed non odio non elit porttitor tincidunt. Donec fermentum, elit sit amet</div>
+							  <i class="icon flaticon-business-018-startup"></i>
+							  <h5 class="title">End-to-End Development</h5>
+							  <div class="text">VSTech offers complete development services, delivering tailored software solutions. Our skilled team handles custom applications, scalable architectures, and seamless system integration.</div>
 							</div>
-
 							<div class="about-block-four">
-								<i class="icon flaticon-business-027-world"></i>
-								<h5 class="title">Software IT Outsource</h5>
-								<div class="text">Sed non odio non elit porttitor tincidunt. Donec fermentum, elit sit amet</div>
+							  <i class="icon flaticon-business-027-world"></i>
+							  <h5 class="title">Software IT Outsourcing</h5>
+							  <div class="text">VSTech provides trusted software IT outsourcing. We offer expertise, allowing businesses to focus on core competencies while we handle complex development projects.</div>
 							</div>
-
 							<ul class="list-style-three">
-								<li>Sed non odio non elit porttitor tincidunt donec</li>
-								<li>Sed non odio non elit porttitor tinc</li>
+							  <li>Custom software solutions tailored to your specific needs</li>
+							  <li>Advanced technologies and industry best practices</li>
 							</ul>
-						</div>
+						  </div>
 
 						<div class="btm-box">
-							<a href="{% url 'about' %}" class="theme-btn btn-style-one"><span class="btn-title">Discover more</span></a>
+							<a href="{% url 'services:list' %}" class="theme-btn btn-style-one"><span class="btn-title">Discover more</span></a>
 						</div>
 					</div>
 				</div>
@@ -47,11 +47,11 @@
 						<div class="image-box">
 							<figure class="image wow fadeIn"><img src="/static/images/resource/men.png" alt=""></figure>
 							<div class="completed-projects">
-								<strong>870+</strong>
+								<strong>57+</strong>
 								<div class="text">PROJECT DONE</div>
 							</div>
 							<div class="experience bounce-y">
-								<strong>25</strong>
+								<strong>3</strong>
 								<div class="text">Years of <br>Experience</div>
 							</div>
 						</div>
@@ -74,7 +74,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-011-dollar"></i>
-						<h6 class="title"><a href="page-service-details/">Banking</a></h6>
+						<h6 class="title"><a href="#">Banking</a></h6>
 					</div>
 				</div>
 
@@ -82,7 +82,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-049-presentation"></i>
-						<h6 class="title"><a href="page-service-details/">Healthcare</a></h6>
+						<h6 class="title"><a href="#">Healthcare</a></h6>
 					</div>
 				</div>
 
@@ -90,7 +90,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-061-meeting"></i>
-						<h6 class="title"><a href="page-service-details/">Education</a></h6>
+						<h6 class="title"><a href="#">Education</a></h6>
 					</div>
 				</div>
 
@@ -98,7 +98,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-030-settings"></i>
-						<h6 class="title"><a href="page-service-details/">Manufacturing</a></h6>
+						<h6 class="title"><a href="#">Manufacturing</a></h6>
 					</div>
 				</div>
 
@@ -106,7 +106,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-054-graph"></i>
-						<h6 class="title"><a href="page-service-details/">Capital Markets</a></h6>
+						<h6 class="title"><a href="#">Capital Markets</a></h6>
 					</div>
 				</div>
 
@@ -114,7 +114,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-020-hierarchy"></i>
-						<h6 class="title"><a href="page-service-details/">Networking</a></h6>
+						<h6 class="title"><a href="#">Networking</a></h6>
 					</div>
 				</div>
 
@@ -123,90 +123,7 @@
 	</section>
 	<!-- End Industries Section -->
 
-	<!-- Project Section -->
-	<section class="project-section alternate pb-0">
-		<div class="auto-container">
-			<div class="sec-title">
-				<div class="row">
-					<div class="col-lg-7">
-						<span class="sub-title">recently Completed work</span>
-						<h2>Improve & Enhance the <br>Tech Projects</h2>
-					</div>
-					<div class="col-lg-5">
-						<div class="text">There are many variations of passages of available but majority have suffered
-							alteration in some form, by humou or randomised words which don't look even slightly believable.
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="carousel-outer">
-				<!-- Prject Carousel -->
-				<div class="project-carousel owl-carousel owl-theme">
-					<!-- Project Block -->
-					<div class="project-block">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="/static/images/resource/project-1.jpg" class="lightbox-image"><img
-											src="/static/images/resource/project-1.jpg" alt=""></a></figure>
-								<a href="page-project-details/" class="icon"><i class="fa fa-long-arrow-alt-right"></i></a>
-							</div>
-							<div class="content-box">
-								<h4 class="title"><a href="page-project-details/">Tech Solutions</a></h4>
-								<span class="cat">DESIGN / IDEAS</span>
-							</div>
-						</div>
-					</div>
-
-					<!-- Project Block -->
-					<div class="project-block">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="/static/images/resource/project-2.jpg" class="lightbox-image"><img
-											src="/static/images/resource/project-2.jpg" alt=""></a></figure>
-								<a href="page-project-details/" class="icon"><i class="fa fa-long-arrow-alt-right"></i></a>
-							</div>
-							<div class="content-box">
-								<h4 class="title"><a href="page-project-details/">Smart Visions</a></h4>
-								<span class="cat">DESIGN / IDEAS</span>
-							</div>
-						</div>
-					</div>
-
-					<!-- Project Block -->
-					<div class="project-block">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="/static/images/resource/project-3.jpg" class="lightbox-image"><img
-											src="/static/images/resource/project-3.jpg" alt=""></a></figure>
-								<a href="page-project-details/" class="icon"><i class="fa fa-long-arrow-alt-right"></i></a>
-							</div>
-							<div class="content-box">
-								<h4 class="title"><a href="page-project-details/">Platform Integration</a></h4>
-								<span class="cat">DESIGN / IDEAS</span>
-							</div>
-						</div>
-					</div>
-
-					<!-- Project Block -->
-					<div class="project-block">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="/static/images/resource/project-4.jpg" class="lightbox-image"><img
-											src="/static/images/resource/project-4.jpg" alt=""></a></figure>
-								<a href="page-project-details/" class="icon"><i class="fa fa-long-arrow-alt-right"></i></a>
-							</div>
-							<div class="content-box">
-								<h4 class="title"><a href="page-project-details/">Web Development</a></h4>
-								<span class="cat">DESIGN / IDEAS</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--End Project Section -->
+	{% include 'partials/projects/1.html' %}
 
 	<!-- Team Section -->
 	<section class="team-section-two">
@@ -260,22 +177,6 @@
 	</section>
 	<!-- End Team Section -->
 
-	<!-- Clients Section   -->
-	<section class="clients-section alternate">
-		<div class="auto-container">
-			<!-- Sponsors Outer -->
-			<div class="sponsors-outer">
-				<!--clients carousel-->
-				<ul class="clients-carousel owl-carousel owl-theme">
-					<li class="slide-item"> <a href="#"><img src="/static/images/resource/client.png" alt=""></a> </li>
-					<li class="slide-item"> <a href="#"><img src="/static/images/resource/client.png" alt=""></a> </li>
-					<li class="slide-item"> <a href="#"><img src="/static/images/resource/client.png" alt=""></a> </li>
-					<li class="slide-item"> <a href="#"><img src="/static/images/resource/client.png" alt=""></a> </li>
-					<li class="slide-item"> <a href="#"><img src="/static/images/resource/client.png" alt=""></a> </li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	<!--End Clients Section -->
+	{% include 'partials/clients/1.html' %}
 
 {% endblock %}
