--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -88,7 +88,7 @@
                 <div class="footer-column col-xl-3 col-lg-12 col-md-6 col-sm-12">
                     <div class="footer-widget about-widget">
                         <div class="logo"><a href="/"><img src="/static/images/logo.png" alt="" width="180" ></a></div>
-                        <div class="text">Desires to obtain pain of itself, because it is pain, but occasionally circumstances.</div>
+                        <div class="text">Tech company providing innovative solutions to complex problems</div>
                         <ul class="social-icon-two">
                             <li><a href="{{ about.twitter|default:'https://twitter.com/vstech_ltd' }}"><span class="fab fa-twitter"></span></a></li>
                             <li><a href="{{ about.facebook|default:'https://fb.com' }}"><span class="fab fa-facebook-square"></span></a></li>
