--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,77 +1,53 @@
 {% extends 'base.html' %}
+{% block title %}Blogs - VSTech Limited{% endblock %}
 {% block meta %}
-
+	<meta name="title" content="Blogs - VSTech Limited">
+	<meta name="keywords" content="vstech, blogs, vstech limited, vstech blogs, blog, VSTech Limited, software development, IT services, news, tips, insights, industry trends">
+	<meta name="description" content="Stay up-to-date with the latest news, tips, and insights on software development and IT services offered by VSTech Limited on our blog page.">
+    <meta name="next-head-count" content="5" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 {% endblock %}
 {% block content %}
+{% if blogs %}
 	<!-- News Section -->
-	<section class="">
-		<div class="container pb-90">
-			<div class="row">
-				<!-- News Block -->
-				<div class="news-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="news-details/"><img src="/static/images/resource/news-1.jpg" alt=""></a></figure>
-							<span class="date"><b>28</b> OCT</span>
-						</div>
-						<div class="content-box">
-							<ul class="post-info">
-								<li><i class="fa fa-user"></i> by Admin</li>
-								<li><i class="fa fa-tag"></i> Technology</li>
-							</ul>
-							<h4 class="title"><a href="news-details/">Professional technology information & solutions are just like…</a></h4>
-						</div>
-						<div class="bottom-box">
-							<a href="news-details/" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
-							<div class="comments"><i class="fa fa-comments"></i> 02</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- News Block -->
-				<div class="news-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="news-details/"><img src="/static/images/resource/news-2.jpg" alt=""></a></figure>
-							<span class="date"><b>28</b> OCT</span>
-						</div>
-						<div class="content-box">
-							<ul class="post-info">
-								<li><i class="fa fa-user"></i> by Admin</li>
-								<li><i class="fa fa-tag"></i> Technology</li>
-							</ul>
-							<h4 class="title"><a href="news-details/">Professional technology information & solutions are just like…</a></h4>
-						</div>
-						<div class="bottom-box">
-							<a href="news-details/" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
-							<div class="comments"><i class="fa fa-comments"></i> 02</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- News Block -->
-				<div class="news-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="news-details/"><img src="/static/images/resource/news-3.jpg" alt=""></a></figure>
-							<span class="date"><b>28</b> OCT</span>
-						</div>
-						<div class="content-box">
-							<ul class="post-info">
-								<li><i class="fa fa-user"></i> by Admin</li>
-								<li><i class="fa fa-tag"></i> Technology</li>
-							</ul>
-							<h4 class="title"><a href="news-details/">Professional technology information & solutions are just like…</a></h4>
-						</div>
-						<div class="bottom-box">
-							<a href="news-details/" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
-							<div class="comments"><i class="fa fa-comments"></i> 02</div>
-						</div>
-					</div>
-				</div>
+	<section class="news-section">
+		<div class="auto-container">
+			<div class="sec-title text-center">
+				<span class="sub-title">from the blog</span>
+				<h2>News & Articles</h2>
 			</div>
 
+			<div class="row">
+				{% for blog in blogs %}
+					<!-- News Block -->
+					<div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+						<div class="inner-box">
+							<div class="image-box">
+								<figure class="image"><a href="{{ blog.get_absolute_url }}"><img src="{% if blog.front_image %} {{blog.front_image.url }} {% else %}/static/images/resource/news-1.jpg{% endif %}" alt="{{ blog }}" title="{{ blog }}"></a></figure>
+								<span class="date"><b>{{ blog.published_date|date:'d' }}</b> {{ blog.published_date|date:'M' }}</span>
+							</div>
+							<div class="content-box">
+								<ul class="post-info">
+									<li><i class="fa fa-user"></i> by {{ blog.author.get_full_name|default:'No Name' }}</li>
+									<li><i class="fa fa-tag"></i> {{ blog.category }}</li>
+								</ul>
+								<h4 class="title"><a href="{{ blog.get_absolute_url }}">{{ blog.title|truncatechars:35 }}</a></h4>
+							</div>
+							<div class="bottom-box">
+								<a href="{{ blog.get_absolute_url }}" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+								<div class="comments">
+									<i class="fa fa-eye" aria-hidden="true"></i> {{ blog.views }}
+									<i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ blog.likes }}
+									<i class="fa fa-thumbs-down" aria-hidden="true"></i> {{ blog.dislikes }}
+									<i class="fa fa-comments"></i> {{ blog.comments.all.count }}
+								</div>
+							</div>
+						</div>
+					</div>
+				{% endfor%}
+			</div>
 		</div>
 	</section>
 	<!--End News Section -->
+{% endif %}
 {% endblock %}
