--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -749,31 +749,7 @@
 	</section>
 	<!--End Call To Action Two -->
 
-	<!-- Map Section-->
-	<section class="map-section">
-		<iframe
-			class="w-100" height="500"
-			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127642.54858596377!2d36.90242244955056!3d-1.2755493367503536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f47952563285d%3A0x70d092fb85ccb757!2sVSTech%20Limited!5e0!3m2!1sen!2ske!4v1685967071607!5m2!1sen!2ske" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-		</iframe>
-		<div class="branches-outer">
-			<div class="auto-container">
-				<div class="row">
-					<!-- Branch Block -->
-					<div class="branch-block col-lg-4 col-md-12 col-sm-12">
-						<div class="inner-box">
-							<h5 class="title">Nairobi, Kenya</h5>
-							<ul class="info-list">
-								<li><i class="fa fa-phone text-warning"></i> <a href="tel:{{ about.phone_number|default:+254795067776 }}">{{ about.phone_number|default:+254795067776 }}</a><br></li>
-								<li><i class="fa fa-envelope text-warning"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
-								<li><i class="fa fa-map-marker-alt text-warning"></i> {{ about.address|default:'Moi Avenue Ibrahim Shopping Mall'}}</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--End Map Section-->
+	{% include 'partials/map.html' %}
 
 
 		{% include 'partials/footer.html' %}
