--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -3,102 +3,30 @@
 
 {% endblock %}
 {% block content %}
+	{% if services %}
 	<!-- Services Section -->
-	<section class="">
-		<div class="container">
-
+	<section class="services-section">
+		<div class="auto-container">
 			<div class="row">
 				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="page-service-details/"><img src="/static/images/resource/service-1.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon flaticon-business-010-startup"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details/">Product Development</a></h5>
-							<div class="text">We’ve designed a culture that allows our stewards to assimilate</div>
-							<a href="page-service-details/" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="page-service-details/"><img src="/static/images/resource/service-2.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon flaticon-business-002-graph"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details/">UI/UX Designing</a></h5>
-							<div class="text">We’ve designed a culture that allows our stewards to assimilate</div>
-							<a href="page-service-details/" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
+				{% for service in services %}
+					<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+						<div class="inner-box">
+							<div class="image-box">
+								<figure class="image"><a href="{{ service.get_absolute_url }}"><img src="{% if service.front_image %}{{ service.front_image.url }}{% else %}/static/images/resource/service-1.jpg{% endif %}" alt="{{ service }}" title="{{ service }}"></a></figure>
+								<div class="icon-box"><i class="{% if service.icon %}{{ service.icon }}{% else %}icon flaticon-business-010-startup{% endif %}"></i></div>
+							</div>
+							<div class="content-box">
+								<h5 class="title"><a href="{{ service.get_absolute_url }}">{{ service.title }}</a></h5>
+								<div class="text">{{ service.description|truncatechars:100 }}</div>
+								<a href="{{ service.get_absolute_url }}" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
+							</div>
 						</div>
 					</div>
-				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="page-service-details/"><img src="/static/images/resource/service-3.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon flaticon-business-048-coin"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details/">Digital Marketing</a></h5>
-							<div class="text">We’ve designed a culture that allows our stewards to assimilate</div>
-							<a href="page-service-details/" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="page-service-details/"><img src="/static/images/resource/service-3.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon flaticon-business-002-graph"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details/">Data Analysis</a></h5>
-							<div class="text">We’ve designed a culture that allows our stewards to assimilate</div>
-							<a href="page-service-details/" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="page-service-details/"><img src="/static/images/resource/service-1.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon flaticon-business-048-coin"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details/">Security System</a></h5>
-							<div class="text">We’ve designed a culture that allows our stewards to assimilate</div>
-							<a href="page-service-details/" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12">
-					<div class="inner-box">
-						<div class="image-box">
-							<figure class="image"><a href="page-service-details/"><img src="/static/images/resource/service-2.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon flaticon-business-010-startup"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details/">Data Visualization</a></h5>
-							<div class="text">We’ve designed a culture that allows our stewards to assimilate</div>
-							<a href="page-service-details/" class="read-more">read More <i class="fa fa-long-arrow-alt-right"></i></a>
-						</div>
-					</div>
-				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</section>
 	<!-- End Services Section-->
+{% endif %}
 {% endblock %}
