--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}Services - VSTech Limited {% endblock %}
 {% block meta %}
-
+	<meta name="title" content="Services - VSTech Limited">
+	<meta name="keywords" content="vstech, vstech limied, vstech products, products, services, software solutions, VSTech Limited, business needs, industry solutions, Web App Development , Support and maintenance , E-Learning &amp; Training , Hosting services , Consultation Services , Mobile app development , Software development ">
+	<meta name="description" content="Discover the wide range of software development and IT services offered by VSTech Limited. From consultation to custom software development, we have a solution for your business needs.">
 {% endblock %}
 {% block content %}
 	{% if services %}
