--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+<h2 class="text-center">{% trans "Confirm E-mail Address" %}</h2>
 
 {% if confirmation %}
 
@@ -17,7 +17,7 @@
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
+    <button type="submit" class="theme-btn btn-style-one w-100">{% trans 'Confirm' %}</button>
 </form>
 
 {% else %}
