--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,10 +1,11 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <h2 class="text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
@@ -12,8 +13,8 @@
     {% else %}
         <form method="POST" action="{{ action_url }}">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
+            {{ form|crispy }}
+            <input type="submit" class="theme-btn btn-style-one w-100" name="action" value="{% trans 'change password' %}"/>
         </form>
     {% endif %}
 {% endblock %}
