--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -4,6 +4,6 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <h2 class="text-center">{% trans "Change Password" %}</h2>
+    <p class="alert alert-info">{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
