--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<h2 class="text-center">{% trans "Sign Up Closed" %}</h2>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<p class="alert alert-info">{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
