--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+<h2 class="text-center">{% trans "Verify Your E-mail Address" %}</h2>
 
 {% url 'account_email' as email_url %}
 
@@ -17,7 +17,7 @@ verify ownership of your e-mail address. {% endblocktrans %}</p>
 verification. Please click on the link inside that e-mail. If you do not see the verification e-mail in your main inbox, check your spam folder. Otherwise
 contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
-<p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
+<p class="alert alert-info">{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
 
 
 {% endblock %}
