--- a/templates/partials/top-nav.html
+++ b/templates/partials/top-nav.html
@@ -88,7 +88,7 @@
 							<button class="ui-btn ui-btn search-btn">
 								<span class="icon lnr lnr-icon-search"></span>
 							</button>
-							<a href="#" class="ui-btn"><i class="lnr-icon-shopping-cart"></i></a>
+							<a href="{% url 'shop:cart' %}" class="ui-btn"><i class="lnr-icon-shopping-cart"></i></a>
 						</div>
 
 
@@ -122,6 +122,30 @@
 					<!--Keep This Empty / Menu will come through Javascript-->
 				</ul>
 				<ul class="contact-list-one">
+					{% if request.user.is_authenticated %}
+						<li>
+							<div class="contact-info-box">
+								<i class="icon fa fa-power-off" aria-hidden="true"></i>
+								<span class="title">Account</span>
+								<a href="{% url 'account_logout' %}">Logout</a>
+							</div>
+						</li>
+					{% else %}				
+						<li>
+							<div class="contact-info-box">
+								<i class="icon fa fa-user-plus" aria-hidden="true"></i>
+								<span class="title">Account</span>
+								<a href="{% url 'account_signup' %}">Register</a>
+							</div>
+						</li>
+						<li>
+							<div class="contact-info-box">
+								<i class="icon fa fa-user-circle" aria-hidden="true"></i>
+								<span class="title">Account</span>
+								<a href="{% url 'account_login' %}">Login</a>
+							</div>
+						</li>
+					{% endif %}
 					<li>
 						<!-- Contact Info Box -->
 						<div class="contact-info-box">
@@ -170,9 +194,9 @@
 			<button class="close-search"><span class="fa fa-times"></span></button>
 
 			<div class="search-inner">
-				<form method="post" action="">
+				<form method="get" action="">
 					<div class="form-group">
-						<input type="search" name="search-field" placeholder="Search..." required>
+						<input type="search" name="q" placeholder="Search..." required>
 						<button type="submit"><i class="fa fa-search"></i></button>
 					</div>
 				</form>
