--- a/templates/services/details.html
+++ b/templates/services/details.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}{{ title }} - {{ category }} - VSech Limited{% endblock %}
 {% block meta %}
 
 {% endblock %}
@@ -15,14 +16,13 @@
 							<div class="service-sidebar wow fadeInUp"
 								data-wow-delay="0.1s" data-wow-duration="1200m">
 							    <div class="service-list">
-						        <ul>
-					            <li><a href="page-service-details/" class="current"><i class="fas fa-angle-right"></i><span>Digital Marketing</span></a></li>
-					            <li><a href="page-service-details/"><i class="fas fa-angle-right"></i><span>UI/UX Designing</span></a></li>
-					            <li><a href="page-service-details/"><i class="fas fa-angle-right"></i><span>Product Development</span></a></li>
-					            <li><a href="page-service-details/"><i class="fas fa-angle-right"></i><span>Data Analysis</span></a></li>
-					            <li><a href="page-service-details/"><i class="fas fa-angle-right"></i><span>Security System</span></a></li>
-					            <li><a href="page-service-details/"><i class="fas fa-angle-right"></i><span>Data Visualization</span></a></li>
-						        </ul>
+									{% if services %}
+									<ul>
+										{% for ser in services %}
+											<li><a href="{{ ser.get_absolute_url }}" class="{% if service == ser %}current{% endif %}"><i class="fas fa-angle-right"></i><span>{{ ser }}</span></a></li>
+										{% endfor %}
+									</ul>
+									{% endif %}
 							    </div>
 							</div>
 						</div>
@@ -35,7 +35,7 @@
                   <div class="icon-box">
                     <i class="lnr lnr-icon-pie-chart"></i>
                   </div>
-                  <h3>Be healthy & eat only fresh</h3>
+                  <h3>View VSTech Profile</h3>
                   <a href="{% url 'contact' %}" class="theme-btn btn-style-two bg-light"><span class="btn-title text-black"> Contact us</span></a>
                 </div>
               </div>
@@ -56,106 +56,89 @@
 				<!--Start Services Details Content-->
 				<div class="col-xl-8 col-lg-8">
 					<div class="services-details__content">
-						<img src="/static/images/resource/service-details.jpg" alt="" />
-						<h2 class="mt-4">Service Overview</h2>
-						<p>Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var sed efficitur turpis gilla sed sit amet finibus eros. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the ndustry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-						<p>When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+						<img src="{% if service.cover_image %}{{ service.cover_image.url }}{% else %}/static/images/resource/service-details.jpg{% endif %}" alt="{{ service }}" title="{{ service }}"/>
+						<h2 class="mt-4">{{ service.title }}</h2>
+						<p>{{ service.description|linebreaks|default:'No Description' }}</p>
 						<div class="content mt-40">
 							<div class="text">
-								<h3>Service Center</h3>
-								<p>Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+							  <h3>Service Center</h3>
+							  <p>Our service center offers exceptional solutions to meet your needs. We strive to provide a seamless experience, ensuring customer satisfaction and peace of mind.</p>
 							</div>
 							<div class="feature-list">
-								<div class="row clearfix">
-									<div class="col-lg-6 col-md-6 col-sm-12 column">
-										<div class="single-item">
-											<div class="icon-box"><i class="fas fa-check-circle"></i></div>
-											<h6 class="title">Fast home delivery</h6>
-										</div>
-									</div>
-									<div class="col-lg-6 col-md-6 col-sm-12 column">
-										<div class="single-item">
-											<div class="icon-box"><i class="fas fa-check-circle"></i></div>
-											<h6 class="title">Secure Payments</h6>
-										</div>
-									</div>
-									<div class="col-lg-6 col-md-6 col-sm-12 column">
-										<div class="single-item">
-											<div class="icon-box"><i class="fas fa-check-circle"></i></div>
-											<h6 class="title">Delivering best products</h6>
-										</div>
-									</div>
-									<div class="col-lg-6 col-md-6 col-sm-12 column">
-										<div class="single-item">
-											<div class="icon-box"><i class="fas fa-check-circle"></i></div>
-											<h6 class="title">Food Inspections</h6>
-										</div>
-									</div>
-									<div class="col-lg-6 col-md-6 col-sm-12 column">
-										<div class="single-item">
-											<div class="icon-box"><i class="fas fa-check-circle"></i></div>
-											<h6 class="title">Generator Systems</h6>
-										</div>
-									</div>
-									<div class="col-lg-6 col-md-6 col-sm-12 column">
-										<div class="single-item">
-											<div class="icon-box"><i class="fas fa-check-circle"></i></div>
-											<h6 class="title">Assessments</h6>
-										</div>
-									</div>
+							  <div class="row clearfix">
+								<div class="col-lg-6 col-md-6 col-sm-12 column">
+								  <div class="single-item">
+									<div class="icon-box"><i class="fas fa-check-circle"></i></div>
+									<h6 class="title">Efficient Service Delivery</h6>
+								  </div>
 								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 column">
+								  <div class="single-item">
+									<div class="icon-box"><i class="fas fa-check-circle"></i></div>
+									<h6 class="title">Secure Transactions</h6>
+								  </div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 column">
+								  <div class="single-item">
+									<div class="icon-box"><i class="fas fa-check-circle"></i></div>
+									<h6 class="title">Quality Products</h6>
+								  </div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 column">
+								  <div class="single-item">
+									<div class="icon-box"><i class="fas fa-check-circle"></i></div>
+									<h6 class="title">Thorough Inspections</h6>
+								  </div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 column">
+								  <div class="single-item">
+									<div class="icon-box"><i class="fas fa-check-circle"></i></div>
+									<h6 class="title">Reliable Systems</h6>
+								  </div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 column">
+								  <div class="single-item">
+									<div class="icon-box"><i class="fas fa-check-circle"></i></div>
+									<h6 class="title">Comprehensive Assessments</h6>
+								  </div>
+								</div>
+							  </div>
 							</div>
-						</div>
-						<div class=" mt-25">
-							<h3>Frequently Asked Question</h3>
-							<p>Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+						  </div>
+						
+							{% if service.faqs.all %}
+
+							<div class="mt-25">
+							<h3>Frequently Asked Questions</h3>
+							<p>Explore some commonly asked questions about this service. If you have any additional inquiries, feel free to reach out to our team.</p>
 							<ul class="accordion-box wow fadeInRight">
 								<!--Block-->
-								<li class="accordion block">
-									<div class="acc-btn">Is my technology allowed on tech?
-										<div class="icon fa fa-plus"></div>
-									</div>
-									<div class="acc-content">
-										<div class="content">
-											<div class="text">There are many variations of passages the majority have suffered alteration in some fo injected humour, or randomised words believable.</div>
-										</div>
-									</div>
-								</li>
-								<!--Block-->
 								<li class="accordion block active-block">
-									<div class="acc-btn active">How to soft launch your business?
+									<div class="acc-btn active">What is your Team's Experience in developing mobile application?
 										<div class="icon fa fa-plus"></div>
 									</div>
 									<div class="acc-content current">
 										<div class="content">
-											<div class="text">There are many variations of passages the majority have suffered alteration in some fo injected humour, or randomised words believable.</div>
+											<div class="text">We also have extensive experience in developing mobile applications and are equipped to handle large projects. Our rates are competitive and depend on the scope of the project</div>
 										</div>
 									</div>
 								</li>
+								{% for faq in service.faqs.all %}
 								<!--Block-->
 								<li class="accordion block">
-									<div class="acc-btn">How to turn visitors into contributors
+									<div class="acc-btn">{{ faq.question }}
 										<div class="icon fa fa-plus"></div>
 									</div>
 									<div class="acc-content">
 										<div class="content">
-											<div class="text">There are many variations of passages the majority have suffered alteration in some fo injected humour, or randomised words believable.</div>
+											<div class="text">{{ faq.answer|linebreaks }}</div>
 										</div>
 									</div>
 								</li>
-								<!--Block-->
-								<li class="accordion block">
-									<div class="acc-btn">How can i find my solutions?
-										<div class="icon fa fa-plus"></div>
-									</div>
-									<div class="acc-content">
-										<div class="content">
-											<div class="text">There are many variations of passages the majority have suffered alteration in some fo injected humour, or randomised words believable.</div>
-										</div>
-									</div>
-								</li>
+								{% endfor %}
 							</ul>
 						</div>
+						{% endif %}
 					</div>
 				</div>
 				<!--End Services Details Content-->
