--- a/templates/socialaccount/connections.html
+++ b/templates/socialaccount/connections.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Account Connections" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Connections" %}</h1>
+<h2>{% trans "Account Connections" %}</h2>
 
 {% if form.accounts %}
 <p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
@@ -32,7 +32,7 @@
 {% endfor %}
 
 <div>
-<button type="submit">{% trans 'Remove' %}</button>
+<button type="submit" class="theme-btn btn-style-one">{% trans 'Remove' %}</button>
 </div>
 
 </fieldset>
@@ -43,7 +43,7 @@
 <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
 {% endif %}
 
-<h2>{% trans 'Add a 3rd Party Account' %}</h2>
+<h3>{% trans 'Add a 3rd Party Account' %}</h3>
 
 <ul class="socialaccount_providers">
 {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
