--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if process == "connect" %}
-<h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
+<h2 class="text-center">{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h2>
 
 <p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
 {% else %}
@@ -16,6 +16,6 @@
 
 <form method="post">
   {% csrf_token %}
-  <button type="submit">{% trans "Continue" %}</button>
+  <button type="submit" class="theme-btn btn-style-one">{% trans "Continue" %}</button>
 </form>
 {% endblock %}
