--- a/templates/socialaccount/login_cancelled.html
+++ b/templates/socialaccount/login_cancelled.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h1>{% trans "Login Cancelled" %}</h1>
+<h2 class="text-center">{% trans "Login Cancelled" %}</h2>
 
 {% url 'account_login' as login_url %}
 
